--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   flutter_staggered_animations: ^1.1.1
   get: ^4.6.5
   get_storage: ^2.0.3
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
   intl: ^0.17.0
   pin_code_fields: ^7.4.0
 
@@ -78,6 +80,5 @@ flutter:
           weight: 600
         - asset: assets/fonts/Poppins-SemiBold.ttf
           weight: 700
-  #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
