--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,10 +40,14 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   intl: ^0.17.0
+  path_provider: ^2.0.11
   pin_code_fields: ^7.4.0
+  uuid: ^3.0.7
 
 dev_dependencies:
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.2
+  hive_generator: ^2.0.0
   flutter_test:
     sdk: flutter
 
